更新版本，添加源信息

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,13 @@
 [package]
 name = "variance"
-version = "1.0.1"
+version = "1.1.1"
 edition = "2021"
 authors = ["LKHSSS <Likhsss@qq.com>"]
 description = "一个简单的计算方差的工具。由Rust编写而成。是LKHSSS学习Rust语言的练手之作。"
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
+license = "MIT"
+repository = "https://github.com/lkhsss/variance"
+homepage = "https://github.com/lkhsss/variance"
+keywords = ["math", "rust"]
 [dependencies]
 colored = {version="2.0.4",default-features=false}
 
